# pd2-trade

./: .env  .gitignore  .prettierignore  ARCHITECTURE.md  README.md  commitlint.config.js  eslint.config.js  linux.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.github/workflows/: publish-to-manual-release.yml  test-discord-webhook.yml
docs/: download.md  faq.md  index.md  linux.md  quick-start.md
docs/.vitepress/: config.js
scripts/: install-node.sh  install-rust.sh
src/: globals.css  index.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: chat_watcher.rs  commands.rs  config.rs  keyboard.rs  mod.rs  system.rs  webview.rs  window.rs
src-tauri/src/modules/system/: linux.rs  windows.rs
src-tauri/src/modules/window/: linux.rs  mod.rs  windows.rs
src/assets/: changeLog.ts  character-skills.ts  class-skills.ts  cube-corruptions.ts  itemFuzzySearch.ts  items.ts  modifiers.ts
src/common/: constants.ts  item-types.ts  updater.tsx  window-config.json
src/common/types/: CharacterSkill.ts  EventPayload.ts  (+3 more)
src/components/: GlobalErrorHandler.tsx
src/hooks/: useAppUpdates.tsx  useChangelog.tsx  useChatClickThrough.tsx  useClickThrough.tsx  useClipboard.ts  useDialog.tsx  useItems.tsx  useKeySender.ts  useOptions.tsx  usePD2Auth.tsx  usePendingListingsQueue.ts  useShortcuts.tsx  useSocketNotifications.tsx  useTradeMessages.tsx  useTradeOffers.tsx  useTray.tsx  useUpdater.tsx  useWhisperNotifications.tsx  useWindowClickThrough.tsx
src/lib/: browser-app.ts  browser-clipboard.ts  browser-events.ts  browser-fs.ts  browser-http.ts  browser-opener.ts  browser-webview.ts  browser-window.ts  deleted-offers-storage.ts  item-utils.ts  sentryMetrics.ts  utils.ts  window-titles.ts  window.ts
(+82 files in other folders)
