[package]
name = "pd2-trader"
version = "0.5.0"
description = "PD2 Trader"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dmg_meter_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
tauri = { version = "2.9.1", features = ["tray-icon"] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-process = "2.2"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-shell = "2.2"
tauri-plugin-app-exit = "0.1"
tauri-plugin-fs = "2.3"
tauri-plugin-http = "2.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = "0.5.1"
enigo = { version = "0.5.0", features = ["default"] }
notify = "6.1"
tauri-plugin-window-state = "2.4.1"
once_cell = "1.21.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "minwindef"] }
winreg = "0.10"
windows-sys = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
] }
windows = "0.58.0"
runas = "0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2.9"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"
x11 = "2.21.0"
